src-webextensions/discord.user.css
/* ==UserStyle==
@name           Discord high contrast, high density
@namespace      https://github.com/liskin/dotfiles/tree/home/src-webextensions
@version        1.0.0
@author         Tomáš Janoušek
==/UserStyle== */

@-moz-document domain("discord.com") {

	/* high contrast */
	.theme-dark {
		--background-primary: #000;
		--background-secondary: #111;
		--background-secondary-alt: #222;
		--background-tertiary: #222;
		--channeltextarea-background: #222;
		--text-normal: #ddd;
	}

	/* font with better hinting/rendering on non-HiDPI displays */
	body { font-family: "Noto Sans"; }

	/* collapse sidebar */
	div.sidebar-1tnWFu { width: 80px; transition: width 0.3s; }
	div.sidebar-1tnWFu:hover { width: 240px; }

	/* show as much as possible in collapsed sidebar */
	div.sidebar-1tnWFu div.content-1gYQeQ { padding: 0; }
	div.sidebar-1tnWFu div.content-1gYQeQ:not(:hover) div.children-1MGS9G { display: none; }
	div.sidebar-1tnWFu div.overflow-1wOqNV * { text-overflow: clip; }

	/* collapse guild navigation */
	nav.guilds-2JjMmN { z-index: 100; width: 10px; transition: width 0.3s; }
	nav.guilds-2JjMmN:hover { width: 72px; }

	/* no right padding for messages */
	div.message-2CShn3 { padding-right: 0px !important; }

	/* wider inbox */
	div.recentMentionsPopout-2bI1ZN { width: 80vw; max-width: 80vw; }

}

